fix: modal is behind header

--- a/src/shared-web/components/ap-style/ap-style.scss
+++ b/src/shared-web/components/ap-style/ap-style.scss
@@ -34,8 +34,8 @@ html {
 
   --error-z-index: 9999;
   --loading-z-index: 9998;
-  --header-z-index: 9997;
-  --modal-z-index: 9996;
+  --modal-z-index: 9997;
+  --header-z-index: 9996;
 }
 
 html,
